@@ -1763,6 +1763,8 @@ dupnode(NODE *n)
 }
 #endif
 
+/* force_string --- force a node to have a string value */
+
 static inline NODE *
 force_string(NODE *s)
 {
@@ -1778,12 +1780,16 @@ force_string(NODE *s)
 #define	force_number	str2number
 #else /* not GAWKDEBUG */
 
+/* unref --- decrease the reference count and/or free a node */
+
 static inline void
 unref(NODE *r)
 {
 	if (r != NULL && --r->valref <= 0)
 		r_unref(r);
 }
+
+/* force_number --- force a  node to have a numeric value */
 
 static inline NODE *
 force_number(NODE *n)
@@ -1792,6 +1798,8 @@ force_number(NODE *n)
 }
 
 #endif /* GAWKDEBUG */
+
+/* emalloc_real --- malloc with error checking */
 
 static inline void *
 emalloc_real(size_t count, const char *where, const char *var, const char *file, int line)
@@ -1808,6 +1816,8 @@ emalloc_real(size_t count, const char *where, const char *var, const char *file,
 
 	return ret;
 }
+
+/* erealloc_real --- realloc with error checking */
 
 static inline void *
 erealloc_real(void *ptr, size_t count, const char *where, const char *var, const char *file, int line)
