@@ -1,3 +1,9 @@
+2016-06-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h: Add comment headers for several functions.
+	* builtin.c (nondec2awknum): Actually set a '\0' before
+	calling to strtod() so that the save and restore do something.
+
 2016-06-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.sub: Update from GNULIB.
